[project]
name = "dagster-windsurf-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.11.4",
    "dagster-webserver>=1.11.4",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[tool.dagster]
module_name = "dagster_windsurf_test.definitions"
